tests/compile-fail/integration__integration__pseudo__pseudo_non_const.snap
---
source: tests/integration/pseudo.rs
expression: stderr
---
error: non-const pseudo-arg
   ┌─ <input>:30:20
   │
30 │         wait(@mask=I0, @blob="10270000");
   │                    ^^ non-const pseudo-arg


